force-app/main/default/objects/Options__c/Options__c.object-meta.xml
<CustomObject>
    <description>This object contains a child relationship to Question object and stores the options and answers to the test questions</description>
    <label>Options</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Options Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>