force-app/main/default/objects/Options__c/fields/Answers__c.field-meta.xml
<CustomField>
    <fullName>Answers__c</fullName>
    <label>Option</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>