force-app/main/default/objects/Options__c/fields/Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Correct</label>
    <type>Checkbox</type>
</CustomField>